# coupontracker

./: .gitignore  .pre-commit-config.yaml  0001-Add-model-version-number-to-settings-page.patch  ACCURATE_JOURNEY.md  AGENTS.md  ANDROID_DOWNLOAD_TEST_GUIDE.md  ARCHITECTURE_DIAGRAMS.md  BRANCH_CLEANUP_LOG.md  BUILD_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETE_MULTI_COUPON_GUIDE.md  CONTRIBUTING.md  CORRECTED_IMPLEMENTATION_COMPLETE.md  CREATE_GITHUB_RELEASE_NOW.md  CREATE_PRODUCTION_MODEL.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_WARNINGS_FIXED.md  CouponTrackerUIPreview.kt  CouponTrackerUIPreview_README.md  DEPLOYMENT_GUIDE.md  DONE.md  END_TO_END_INTEGRATION_COMPLETE.md  EXTRACTION_ARCHITECTURE_V2.md  EXTRACTION_FAILURE_ANALYSIS.md  EXTRACTION_FLOW_V2_MERMAID.md  FINAL_DELIVERY_SUMMARY.md  FINAL_STATUS.md  FINAL_TESTING_INSTRUCTIONS.md  FIXES_COMPLETE_2025-10-11.md  FIX_EXPIRY_DATE_CRITICAL_2025-10-11.md  FIX_EXTRACTION_SIMPLIFICATION_2025-10-11.md  FIX_SCREENSHOT_TIMESTAMP_2025-10-11.md  GGUF_MODEL_FIX.md  GITHUB_RELEASE_SETUP.md  HONEST_DATA_FLOW_DIAGRAM.html  HYBRID_PLAN_IMPLEMENTATION_STATUS.md  INITIALIZATION_ORDER_FIX.md  JOURNEY_SUMMARY.md  LIBGGML_FIX_COMPLETE.md  LICENSE  (+106 more)
.github/: settings.yml
.github/PULL_REQUEST_TEMPLATE/: ai_guardrails.md
.github/workflows/: branch-lifecycle-report.yml  ci.yml  delete-merged-branches.yml  validator-tests.yml
CouponTrackerUIPreview/: MainActivity.kt  README.md
Coupons /: kapiva_manifest.local.json  kapiva_min899_manifest.local.json  manifest.json
Coupons /ocr/: cred_kapiva_min899_40off.json  cred_kapiva_strength_stamina_40off.json
android_models/: SETUP_INSTRUCTIONS.md  build_results.json  conversion_plan.json  model_download_manager_updates.kt
android_models/android_package/: deployment_manifest.json  model_manifest.json
android_models/mlc_model/: mlc-chat-config.json  tokenizer.model  vision_config.json
android_models/quantized/: config.json
app/: AGENTS.md  build.gradle.kts  build.gradle.kts.bak  model_metadata.json  patterns.json  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  llama_cpp  llama_vision_jni.cpp  mlc_llm_jni.cpp  mlc_llm_jni_real.cpp
app/src/main/cpp/include/: bridge_api.hpp
app/src/main/cpp/native_bridge/: MlcLlmBridge_Llama.cpp  MlcLlmBridge_MLC.cpp  MlcLlmNativeBridge.cpp  VisionPreproc.hpp
benchmark/goldenset/: README.md  manifest.json  manifest.schema.json
benchmark/reports/: gemma_vs_qwen_hermetic.md  gemma_vs_qwen_live.md  hermetic_baseline.md  live_baseline.md  vlm_bakeoff_hermetic.md  vlm_bakeoff_live.md
buildSrc/: build.gradle.kts
config/: version.properties
config/extraction/: android_mirror_manifest.json  canary.json  runtime.json
coupon-training/: Dockerfile  README.md  README_END_TO_END.md  README_OUTLIER_IMPROVEMENTS.md  batch_upload.py  connect_drive_coupons.py  create_sample_coupons.py  download_cred_coupons.py  evaluate_model.py  organize_coupons.py  requirements-ml.txt  requirements-orchestrator.txt  requirements.txt  run_multi_coupon_workflow.py  run_web_ui.py  setup_environment.py  simple_web_ui.py  test_tesseract.py  train_model.py  train_with_cred_coupons.py  update_app_model.py
coupon-training/artifacts/: metadata.json
coupon-training/config/: annotation_guidelines.json  coupon_recognizer_config.json
coupon-training/data_collection/: README.md  annotation_schema.json  collection_log.json  image_preprocessor.py  main.py  outlier_detector.py  reddit_scraper.py  requirements.txt
coupon-training/docs/: annotation_guidelines.md  manual_labeling_plan.md  production_readiness_plan.md
coupon-training/ml/: train.py
coupon-training/scripts/: preannotate.py  (+55 more)
css/: mobile.css
design-audit/: notes.md
discrepancy_reports/: README.md  codex_debug_dataset.json  extraction_discrepancy_report_2025-10-22.md  offertext_plan_review_x67m2r.md
docs/: BRANCH_MANAGEMENT_POLICY.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE_BASE.md  LLM_INTEGRATION.md  MLC_DEPLOYMENT_GUIDE.md  OCR_LLM_PIPELINE_ISSUES.md  OFFER_TEXT_DEPRECATION_PLAN.md  PROJECT_KNOWLEDGE_DIARY.md  README.md  agentic-build-agents.md  branch_inventory.md  brand_specific_code.md  debug_extraction_score_plan.md  extraction_pipeline.md  extraction_reliability_program.md  feature_qwen_multi_coupon_extraction_merge_issues.md  feature_qwen_multi_coupon_extraction_sync.md  gemma_mobile_reader_plan.md  index.html  llm_extraction_plan.md  llm_integration_test_report.json  multi_coupon_model_delivery.md  privacy.html  qwen_coupon_plan_review.md  refactor_architecture.md
extraction-tool/: build.gradle.kts
india_coupon_env/: pyvenv.cfg
js/: annotation.js  data.js  main.js  mobile-zoom.js  storage.js  upload.js
mobile-coupon-trainer/: README.md  data.html  index.html  manifest.json  upload.html
models/: metrics.json  sessions.json
netlify-deploy/: _headers  netlify.toml  sw.js
scripts/: analyze_branch_status.py  analyze_reddit_links.py  build_llama_cpp.sh  build_llama_cpp_mac.sh  build_native.sh  build_real_minicpm.py  capture_android_ocr_sidecars.sh  check_ai_invariants.py  cleanup_merged_branches.sh  convert_minicpm_to_mobile.py  coupon_prompt_optimizer.py  delete_merged_branches.sh  delete_pr_merged_branches.sh  eval_extraction_mac.sh  generate_branch_report.py  generate_golden_set.py  generate_multi_coupon_goldenset.py  generate_ocr_sidecars.sh  llm_smoke_test.py  mlc_model_builder.py  mock_mlc_llm.py  ndk_env.example.sh  organize_documentation.sh  package_dmg.sh  prepare_simplified_model.py  prove_github_actions_runtime.sh  prove_real_screenshot_regressions.py  publish_model_bundle.py  put_prebuilt_libs.sh  regenerate_grammar.kts  run_android_extraction_smoke.sh  run_connected_android_tests.sh  setup_build_environment.py  setup_mlc_llm.sh  sync_android_extraction_assets_to_mac.sh  test_llm_integration.py  test_model_conversion.py  test_model_verification.py  update_model_checksums.py
tests/: test_store_detection.py
utils/: image_processor.py  model_manager.py  ocr_helper.py
web-training-app/: README.md  index.html  testing.html  training.html  upload.html
web_ui/: README.md  app.py  fixed_app.py
(+1497 files in other folders)
